<resources>
    <string name="app_name">Recetario</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_email">La dirección email es inválida</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Permisos de contactos son necesarios para autocompletado de
        emails."
        </string>
    <string name="title_activity_login">IniciarSesión</string>
    <string name="new_client_label">¿Nuevo en Recetario?</string>
    <string name="action_register">Registrarse</string>

    <!-- Strings related to register -->
    <string name="register_title">Registro</string>>
    <string name="prompt_name">Nombre</string>

    <!-- Strings related to Client's Home -->
    <string name="titleClientHome">Bienvenido</string>
    <string name="agregar_receta">Agregar Receta</string>
    <string name="buscar_receta">Buscar Receta</string>
    <string name="listar_recetas">Listar Recetas</string>
    <string name="title_activity_agregar_receta">agregarReceta</string>
    <string name="agregar_receta_client">Agregar Receta</string>
    <string name="logout">Cerrar Sesión</string>

    <!-- Strings related to Recipe Addition Activity -->
    <string name="prompt_recipe_name">Nombre</string>
    <string name="prompt_recipe_type">Tipo</string>
    <string name="prompt_recipe_ingredients">Ingrediente</string>
    <string name="prompt_recipe_instructions">Instruccion</string>
    <string name="crear_receta">Crear Receta</string>
    <string name="addImage">Agregar Imagen</string>
    <string name="addIngredient">Agregar Ingrediente</string>
    <string name="addInstruction">Agregar Instrucción</string>

    <!-- Strings related to All Recipes Activity -->
    <string name="all_title">Todas las Recetas</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="place_holder">Placeholder</string>

    <!-- Strings related to Recipe Detail Activity -->
    <string name="detailed_title">Receta:</string>

    <!-- Strings related to Recipe Searches Activity -->
    <string name="search_title">Búsquedas</string>
    <string name="search_button">Buscar</string>
    <string name="entry_tooltip">Valor de Búsqueda</string>
    <string name="radio_nombre">Nombre</string>
    <string name="radio_tipo">Tipo</string>
    <string name="radio_ingrediente">Ingrediente</string>

    <!-- Strings needed all along the project -->
    <string name="go_back">Volver</string>

</resources>
