<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/recipeCreationTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/agregar_receta"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_recipe_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_recipe_type"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_recipe_ingredients" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Instrucciones"
        android:inputType="text" />

    <ImageView
        android:id="@+id/pictures"
        android:layout_width="match_parent"
        android:layout_height="259dp" />

    <Button
        android:id="@+id/boton_agregar_imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addImage" />

    <Button
        android:id="@+id/button_create_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_receta" />

</LinearLayout>