<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/recipeCreationTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_crear_receta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register" />

</LinearLayout>